--- a/muevelo.html
+++ b/muevelo.html
@@ -21,41 +21,76 @@
     </header>
     <main>
         <h2><a href="index.html">Regresar</a></h2>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>Color en tu pelo, got a sponsor nuevo
+Si ella va a apostar, juego
+Si ella va a apostar busco más dinero
+Me veo en el probador de Zara y soy un tipo bueno</p>
+        <p>Entré por cinco prendas, resolví con meno'
+Un pantalón, dos medias y fui a verla en cuero y no nos conocemos
+Ey, mis dólares al fuego
+Entre vos y yo hay confianza pero hay más con mi joyero, así que</p>
+        <p>Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo
+Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo</p>
+        <p>Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo
+Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo</p>
+        <p>Quiero plata, fama, sexo, droga, una cubana
+Quiero ropa nueva, puta nueva, Punta Cana
+Dale, mamá, solo quiero money
+Soy el que los sube, el que los baja del pony</p>
+        <p>Yo no duermo, te la cuelgo
+Por las noche' enfermo
+Vuelo, vuelo, caramelo entero
+Qué me ve de nuevo, y como siempre nuevo, muévelo</p>
+        <p>Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo
+Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo</p>
+        <p>Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo
+Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo</p>
+        <p>Yeah, yo solo sé de duplicar los ceros,
+No sé de celos, sobran sogas en tus senos, movelos
+Reina, ganate el sueldo
+Cumplí todas las cosa' que me estás diciendo</p>
+        <p>Muévelo, movelo, yeah, okey
+Mi beba es colombiana, así nos entendemo'
+Entre trago y trago trato de mirarla un poco menos
+Si una de las dos apuesta van a negociar el cielo</p>
+        <p>Cadena de oro, mi casa y mi planta
+Le encanta, real motherfucker
+Que lo hago pa' que baile
+Pa' que todas tus amigas tengan ganas de envidiarte</p>
+        <p>Que lo baile duro (duro)
+Si me sobran muchos culos pero ni uno como el tuyo
+Que lo baile fuerte
+A mí no me importa nada, solo vine para verte</p>
+        <p>linda, linda, ya no quiero más a las abogadas
+(Muévelo, muévelo, muévelo) ya no quiero más a las modelos
+(Muévelo, muévelo, muévelo) ¿A cuántos conocés que a esta edad tengamos una mansión?
+(Muévelo, muévelo, muévelo) es que en el mundo hay muchas, hay muchas
+Vos sabés que hay muchas, pero
+¿Cómo no estás acá, cómo no estás acá?
+Te estamos buscando, decinos
+Ahora hasta el Uber, te mandamos la dirección exacta</p>
+        <p>Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo
+Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo</p>
+        <p>Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo
+Muévelo, muévelo, movelo
+Pa' que lo baile la abogada y la modelo
+Bombón, estamos acá en La Mansión, no paran de llegar regalías</p>
+        
     </main>
 
     <footer>
-        <p>Tomás Guzmán</p>
+            <p>Tomás Guzmán</p>
             <p>4to 1ra</p>
             <p><a href="http://www.cet30.edu.ar/">Cet Nº30</a></p>
             <p><img src="fotito/cet302.png" class="imagen-album"></p>
