--- a/resaka.html
+++ b/resaka.html
@@ -21,37 +21,37 @@
     </header>
     <main>
         <h2><a href="index.html">Regresar</a></h2>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>Super Mer Ka 2
+Super Mer Ka 2
+Y ahora
+El Rototo
+Suena Rototo</p>
+        <p>Encontré la solución, al problema de la resaka
+Me mantengo en la joda borracho hasta las seis de la mañana
+Y cuando pinta el sol, nos vamos pa' la esquina
+Bailando con los pibes meta vino y porquerias</p>
+        <p>Super Mer Ka 2
+Super Mer Ka 2</p>
+        <p>Andamos meta vino y porquerias
+Otra vez callo la noche
+Otra vez nos vamos de gira</p>
+        <p>Andamos meta vino y porquerias
+Otra vez callo la noche
+Otra vez nos vamos a la esquina</p>
+        <p>Correo wachín
+Super Mer Ka 2
+Super Mer Ka 2</p>
+        <p>Encontré la solución, al problema de la resaka
+Me mantengo en la joda borracho hasta las seis de la mañana
+Y cuando pinta el sol, nos vamos pa' la esquina
+Bailando con los pibes meta vino y porquerias</p>
+        <p>Andamos meta vino y porquerias
+Otra vez callo la noche
+Otra vez nos vamos a la esquina</p>
+        <p>Andamos meta vino y porquerias
+Otra vez callo la noche
+Otra vez nos vamos a la esquina</p>
+       
     </main>
 
     <footer>
